# learnwords

./: .gitignore  README.md  pyproject.toml
learnwords/: main.py
