[tool.poetry]
name = "learnwords"
version = "0.1.0"
description = ""
authors = ["vicjan89 <vicjan89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
googletrans = "^3.0.0"
translate = "^3.6.1"
rich = "^13.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
learn = 'learnwords.main:learn'
addwords = 'learnwords.main:add_words'
